--- a/.github/workflows/run-report.yml
+++ b/.github/workflows/run-report.yml
@@ -1,1 +1,36 @@
-nfwief
+name: Generate Value Report
+
+on:
+  workflow_dispatch:
+  schedule:
+    - cron: '0 6 * * MON' # weekly on Monday at 06:00 UTC (optional)
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: python -m pip install --upgrade pip && pip install -r requirements.txt
+
+      - name: Run report generation
+        env:
+          FMP_API_KEY: ${{ secrets.FMP_API_KEY }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          GEMINI_MODEL: ${{ secrets.GEMINI_MODEL }}
+          TICKER: ${{ inputs.ticker || 'AAPL' }}
+        run: |
+          python src/generate_report.py
+
+      - name: Upload PDF artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: value-report
+          path: report_*.pdf
