--- a/.github/workflows/run-report.yml
+++ b/.github/workflows/run-report.yml
@@ -2,8 +2,6 @@ name: Generate Value Report
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 6 * * MON' # weekly on Monday at 06:00 UTC (optional)
 
 jobs:
   build:
@@ -18,14 +16,16 @@ jobs:
           python-version: '3.10'
 
       - name: Install dependencies
-        run: python -m pip install --upgrade pip && pip install -r requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Run report generation
         env:
           FMP_API_KEY: ${{ secrets.FMP_API_KEY }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           GEMINI_MODEL: ${{ secrets.GEMINI_MODEL }}
-          TICKER: ${{ inputs.ticker || 'AAPL' }}
+          TICKER: AAPL
         run: |
           python src/generate_report.py
 
